Test re-enable clang -v

--- a/platformio.ini
+++ b/platformio.ini
@@ -66,6 +66,9 @@ lib_deps =
 ; https://community.platformio.org/t/gtest-not-working-on-pio-4-1/10465/7
 lib_compat_mode = off
 extra_scripts = platformio_sanitizers.py
+platform_packages =
+; Pin a portable version of clang-tidy
+  tool-clangtidy @1.100000.0
 ; Run clang-tidy only on native: it seems to get confused by Uno headers that
 ; can only be parsed by gcc.
 check_tool = clangtidy
@@ -77,5 +80,8 @@ check_patterns =
   common/libs
   common/test_libs
   ; Do not include common/generated_libs
-  controller
+  controller/test
+  controller/lib
+  controller/include
+  ; Do not include controller/src, as it depends on Arduino
   gui
