--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,8 @@ jobs:
       - run:
           name: Run cppcheck on /gui
           command: |
+            cd ~/project/common && cppcheck . --error-exitcode=1 && cd -
+            cd ~/project/controller && cppcheck . --error-exitcode=1 && cd -
             cd ~/project/gui && cppcheck . --error-exitcode=1 && cd -
 
   gui-build-image:
