Add PID lib to native

--- a/platformio.ini
+++ b/platformio.ini
@@ -61,6 +61,7 @@ build_flags = -Icommon/include/ -std=gnu++17 -DTEST_MODE -pthread -Wall -Werror
 build_unflags = -std=gnu++11
 lib_deps =
   googletest
+  2 ; PID (specified by number to resolve ambiguity)
   431 ; Nanopb (specified by number to resolve ambiguity)
 ; This is needed for the googletest lib_dep to work.  I don't understand why.
 ; https://community.platformio.org/t/gtest-not-working-on-pio-4-1/10465/7
