--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,8 @@ script:
   - ./test.sh
   # Run Travis-only tests
   - ./travis_only_test.sh
+  # Run gui unit tests
+  - ./gui/gui.sh --test
   # Make sure GUI builds and starts up
-  - ./gui/build.sh
+  - ./gui/gui.sh --build
   - ./gui/build/ProjectVentilatorGUI --startup-only
