--- a/regulatory/data/requirements.yml
+++ b/regulatory/data/requirements.yml
@@ -1,6 +1,10 @@
+categories:
+- id: Alarms
+  name: Software Alarms
+
+requirements:
 - id: r-1
-  title: Low Pressure Alarm
-  system_requirements: [SR-111]
-  description: Software shall alert the user to high pressure when the pressure of the system goes above pressure alarm threshold (P_Alarm_Threshold).  Alarm shall generate a high level alert.
-  specifications: |
-      Implementation details here
+  title: PIP Pressure Exceeds Limit Alarm
+  system_requirements: [SR-XX]
+  category: Alarms
+  description: The software shall indicate an alarm when an pressure exceeding the overpressure_alarm_limit variable is exceeded
