--- a/gui/rpi-image/rpi-primer.yml
+++ b/gui/rpi-image/rpi-primer.yml
@@ -39,20 +39,8 @@
     apt:
       name: menu
 
-  - name: Set default boot to GUI
+  - name: Set pi user's .xsession
     lineinfile:
-      dest: /etc/rc.local
-      insertbefore: 'exit 0'
-      line: 'startx &'
-
-  - name: Disable default boot to Xsession
-    lineinfile:
-      dest: /etc/X11/xinit/xinitrc
-      regexp: '. /etc/X11/Xsession'
-      line: '#. /etc/X11/Xsession'
-
-  - name: Set default boot to OpenBox
-    lineinfile:
-      dest: /etc/X11/xinit/xinitrc
-      insertafter: '#. /etc/X11/Xsession'
+      dest: /home/pi/.xsession
       line: 'exec openbox-session'
+      create: yes
