issue #175: push docker image to docker hub when tests pass

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,6 +88,11 @@ jobs:
           name: Run tests
           command: |
             docker run -i respiraworks/gui:$CIRCLE_SHA1 gui/test.sh
+      - run:
+          name: Push docker image
+          command: |
+            echo "$DOCKER_HUB_TOKEN" | docker login -u "$DOCKER_HUB_USERNAME" --password-stdin
+            docker push respiraworks/gui:$CIRCLE_SHA1
 
 workflows:
   commit:
