--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,8 +91,10 @@ jobs:
       - run:
           name: Push docker image
           command: |
-            echo "$DOCKER_HUB_TOKEN" | docker login -u "$DOCKER_HUB_USERNAME" --password-stdin
-            docker push respiraworks/gui:$CIRCLE_SHA1
+            if [[ "$CIRCLE_BRANCH" == "slankard/issue_175-docker-hub-push-2" ]]; then
+                echo "$DOCKER_HUB_TOKEN" | docker login -u "$DOCKER_HUB_USERNAME" --password-stdin
+                docker push respiraworks/gui:$CIRCLE_SHA1
+            fi
 
 workflows:
   commit:
